SigmaCodebackup3rdSep/objects/Brewery_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Brewer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brewer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BreweryCustomers</relationshipLabel>
        <relationshipName>BreweryCustomers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brewery_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brewery Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BreweryCustomers (Brewery Customer)</relationshipLabel>
        <relationshipName>BreweryCustomers1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BreweryCustomer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brewer_Account__c</columns>
        <columns>Brewery_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Brewery Customers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BreweryCustomers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>